recent changes for the footer

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -305,59 +305,39 @@ website:
 
   page-footer:
     background: "#26818B"
-    left: 
-      - text: | 
-          <img src="/homepage_docsite/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" width="140" style="margin-bottom: 10px;"><br>
-          <div style="margin-bottom: 10px;">
-            <img src="/homepage_docsite/Ellipse%201.svg" width="30" style="margin-right: 2px;">
-            <img src="/homepage_docsite/Ellipse%201.svg" width="30" style="margin-right: 2px;">
-            <img src="/homepage_docsite/Ellipse%201.svg" width="30">
+    left:
+      - text: |
+          <div class="footer-title">
+            <img src="/homepage_docsite/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" width="140" style="margin-bottom: 6px;"><br>
+            <div style="margin-bottom: 6px;">
+              <img src="/homepage_docsite/Ellipse%201.svg" width="30" style="margin-right: 2px;">
+              <img src="/homepage_docsite/Ellipse%201.svg" width="30" style="margin-right: 2px;">
+              <img src="/homepage_docsite/Ellipse%201.svg" width="30">
+            </div>
+            <small>
+              © Copyright {{< now year >}} ValidMind Inc.<br>
+              All Rights Reserved.<br>
+              <a href="/privacy">Privacy Policy</a>  <a href="/terms">Terms of Services</a>
+            </small>
           </div>
-          © Copyright {{< now year >}} ValidMind Inc.<br>
-          All Rights Reserved.<br>
-          <a href="/privacy">Privacy Policy</a>  <a href="/terms">Terms of Services</a>
     center:
       - text: |
-          <div class="footer-column">
-          <strong>Platform</strong><br>
-          <a href="/platform/overview">Platform Overview</a><br>
-          <a href="/platform/demo">Request a Demo</a>
+          <div class="footer-links-horizontal">
+            <a href="https://validmind.com/" target="_blank">validmind.com </a>
+            <a href="https://validmind.com/about/legal/privacy-policy/">Privacy Policy</a>
+            <a href="https://validmind.com/about/legal/terms-of-use/">Terms of Use</a>
+            <a href="https://github.com/validmind/documentation">GitHub</a>
+            <a href="https://www.linkedin.com/company/validmind/">LinkedIn</a>
           </div>
+    right: 
       - text: |
-          <div class="footer-column">
-          <strong>Solutions</strong><br>
-          <a href="/solutions/overview">Solutions Overview</a><br>
-          <a href="/solutions/ai">AI Models</a><br>
-          <a href="/solutions/statistical">Statistical & Traditional Models</a><br>
-          <a href="/solutions/generative">Generative AI Models</a><br>
-          <a href="/solutions/partners">Advantage Partner Ecosystem</a>
-          </div>
-      - text: |
-          <div class="footer-column">
-          <strong>Community</strong><br>
-          <a href="/community/overview">Solutions Overview</a><br>
-          <a href="/community/ai">AI Models</a><br>
-          <a href="/community/statistical">Statistical & Traditional Models</a><br>
-          <a href="/community/generative">Generative AI Models</a><br>
-          <a href="/community/partners">Advantage Partner Ecosystem</a>
-          </div>
-      - text: |
-          <div class="footer-column">
-          <strong>Resources</strong><br>
-          <a href="/blog">Blog</a><br>
-          <a href="/events">Events</a><br>
-          <a href="/briefs">Technical Briefs</a><br>
-          <a href="/webinars">Webinars</a><br>
-          <a href="/legal">Legal</a>
-          </div>  
-      - text: |
-          <div class="footer-column">
-          <strong>Company</strong><br>
-          <a href="/about">About Us</a><br>
-          <a href="/news">News</a><br>
-          <a href="/careers">Careers</a><br>
-          <a href="/contact">Contact</a>
-          </div>
+            <div class="footer-column">
+            <strong>Company</strong><br>
+            <a href="/about">About Us</a><br>
+            <a href="/news">News</a><br>
+            <a href="/careers">Careers</a><br>
+            <a href="/contact">Contact</a>
+            </div>
 format:
  html:
    grid:
@@ -385,3 +365,4 @@ filters:
 
 
 
+ 
