Renamed model lifecycle statuses

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -215,8 +215,7 @@ website:
         - text: "Working with workflows"
           file: guide/model-workflows/working-with-model-workflows.qmd
           contents:
-          - text: "Customize lifecycle statuses"
-            file: guide/model-workflows/customize-model-lifecycle-statuses.qmd
+          - guide/model-workflows/manage-model-stages.qmd
           - text: "Set up workflows"
             file: guide/model-workflows/set-up-model-workflows.qmd
         - text: "---"
