Working with model workflows > work with model workflows

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -212,8 +212,10 @@ website:
           - guide/configuration/customize-your-dashboard.qmd
         - text: "---"
         - text: "Model Workflows"
-        - text: "Working with workflows"
-          file: guide/model-workflows/working-with-model-workflows.qmd
+        - text: "Work with workflows"
+          file: guide/model-workflows/work-with-model-workflows.qmd
+        - text: "Setting up workflows"
+          file: guide/model-workflows/setting-up-model-workflows.qmd
           contents:
           - guide/model-workflows/manage-model-stages.qmd
           - text: "Set up workflows"
