--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -218,8 +218,7 @@ website:
           file: guide/model-workflows/setting-up-model-workflows.qmd
           contents:
           - guide/model-workflows/manage-model-stages.qmd
-          - text: "Set up workflows"
-            file: guide/model-workflows/set-up-model-workflows.qmd
+          - guide/model-workflows/configure-custom-workflows.qmd
         - text: "---"
         - text: "Model Inventory"
         - file: guide/model-inventory/working-with-model-inventory.qmd
