--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -315,29 +315,28 @@ website:
               <img src="/homepage_docsite/Ellipse%201.svg" width="30">
             </div>
             <small>
-              © Copyright {{< now year >}} ValidMind Inc.<br>
-              All Rights Reserved.<br>
-              <a href="/privacy">Privacy Policy</a>  <a href="/terms">Terms of Services</a>
+              © Copyright {{< now year >}} ValidMind Inc. All Rights Reserved.<br>
+              <a href="/privacy">Privacy Policy</a>  <a href="/terms">Terms of Services</a>
             </small>
           </div>
     center:
       - text: |
-          <div class="footer-links-horizontal">
-            <a href="https://validmind.com/" target="_blank">validmind.com </a>
-            <a href="https://validmind.com/about/legal/privacy-policy/">Privacy Policy</a>
-            <a href="https://validmind.com/about/legal/terms-of-use/">Terms of Use</a>
-            <a href="https://github.com/validmind/documentation">GitHub</a>
+          <div class="footer-column">
+            <strong>Community</strong><br>
+            <a href="/guide/guides.qmd">Guides</a><br>
+            <a href="/developer/validmind-library.qmd">For Developers</a><br>
+            <a href="/validmind/validmind.qmd">API Reference</a><br>
+            <a href="/training/training.qmd">Training</a><br>
+            <a href="/support/support.qmd">Support</a><br>
+          </div>
+      - text: |
+          <div class="footer-column">
+            <a href="https://validmind.com/" target="_blank">validmind.com</a><br>
+            <a href="https://validmind.com/about/legal/privacy-policy/">Privacy Policy</a><br>
+            <a href="https://validmind.com/about/legal/terms-of-use/">Terms of Use</a><br>
+            <a href="https://github.com/validmind/documentation">GitHub</a><br>
             <a href="https://www.linkedin.com/company/validmind/">LinkedIn</a>
           </div>
-    right: 
-      - text: |
-            <div class="footer-column">
-            <strong>Company</strong><br>
-            <a href="/about">About Us</a><br>
-            <a href="/news">News</a><br>
-            <a href="/careers">Careers</a><br>
-            <a href="/contact">Contact</a>
-            </div>
 format:
  html:
    grid:
