--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -12,8 +12,8 @@ metadata-files:
 
 website:
   announcement: 
-    content: '[**{{< fa book-open-reader >}} EU AI Act Compliance**](https://validmind.com/download-whitepaper-the-eu-ai-act/) — Read our original regulation brief on how the EU AI Act aims to balance innovation with safety and accountability, setting standards for responsible AI use'
-    position: above-navbar 
+    content: "[**{{< fa book-open-reader >}} EU AI Act Compliance**](https://validmind.com/download-whitepaper-the-eu-ai-act/) — Read our original regulation brief on how the EU AI Act aims to balance innovation with safety and accountability, setting standards for responsible AI use" 
+    position: below-navbar 
   favicon: validmind.png
   title: "ValidMind"
   cookie-consent:
@@ -35,12 +35,58 @@ website:
     title: false
     pinned: true
 
+    left:
+      - text: "About"
+        file: about/overview.qmd
+      - text: "Get Started"
+        file: get-started/get-started.qmd
+      - text: "Guides"
+        file: guide/guides.qmd
+      - text: "{{< fa cube >}} {{< var validmind.developer >}}"
+        menu:
+        - text: "{{< fa laptop-code >}} {{< var validmind.developer >}}"
+          file: developer/validmind-library.qmd
+        - text: "{{< fa cubes >}} Supported Models"
+          file: developer/supported-models.qmd
+        - text: "---"
+        - text:  "{{< fa rocket >}} QUICKSTART"
+        - text: "{{< fa file-pen >}} For Model Documentation"
+          file: notebooks/quickstart/quickstart_model_documentation.ipynb
+        - text: "{{< fa clipboard-check >}} For Model Validation"
+          file: notebooks/quickstart/quickstart_model_validation.ipynb
+        - text: "---"
+        - text:  "{{< fa vial >}} TESTING"
+        - text: "{{< fa flask-vial >}} Run Tests & Test Suites"
+          file: developer/model-testing/testing-overview.qmd
+        - text: "{{< fa microscope >}} Test Descriptions"
+          file: developer/model-testing/test-descriptions.qmd
+        - text: "{{< fa toolbox >}} Test Sandbox (BETA)"
+          file: developer/model-testing/test-sandbox.qmd
+        - text: "---"
+        - text: "{{< fa code >}} CODE SAMPLES"
+        - text: "{{< fa book-open-reader >}} All Code Samples · `LLM` · `NLP` · `Time Series` · `Etc.`"
+          file: developer/samples-jupyter-notebooks.qmd
+        - text: "{{< fa download >}} Download Code Samples · `notebooks.zip`"
+          file: notebooks.zip
+        - text: "{{< fa hand-point-right >}} Try it on JupyterHub {{< fa hand-point-left >}}"
+          file: https://jupyterhub.validmind.ai/
+        - text: "---"
+        - text: "{{< fa book >}} REFERENCE"
+        - text: "{{< var validmind.api >}}"
+          file: validmind/validmind.qmd
+      - text: "Support"
+        file: support/support.qmd
+      - text: "Training"
+        file: training/training.qmd
+      - text: "Releases"
+        file: releases/all-releases.qmd
+      # - text: "validmind.com {{< fa external-link >}}"
+      #   file: https://validmind.com/
+      #   target: _blank
     right:
-      # - text: "{{< fa cube >}} Documentation"
-      #   file: about/overview.qmd
       # HOME BUTTON FOR DEVELOPER & TRAINING SECTIONS
-      # - text: "{{< fa house >}}"
-      #   file: index.qmd
+      - text: "{{< fa house >}}"
+        file: index.qmd
       # DOCUMENTATION MENU FOR DEVELOPER & TRAINING SECTIONS
       - text: "{{< fa book-open >}} Documentation"
         menu:
@@ -79,28 +125,6 @@ website:
       #     file: training/developer-fundamentals/developer-fundamentals-register.qmd
       #   - text: "{{< fa user-check >}} For Validators"
       #     file: training/validator-fundamentals/validator-fundamentals-register.qmd
-
-      - text: "{{< fa book-open >}} Documentation"
-        menu:
-        - text: "{{< fa circle-info >}} About {{< var vm.product >}}"
-          file: about/overview.qmd
-        - text: "{{< fa rocket >}} Get Started"
-          file: get-started/get-started.qmd
-        - text: "{{< fa book >}} Guides"
-          file: guide/guides.qmd
-        - text: "{{< fa envelope-open-text >}} Support"
-          file: support/support.qmd
-        - text: "{{< fa bullhorn >}} Releases"
-          file: releases/all-releases.qmd
-        - text: "---"
-        - text:  "{{< fa cube >}} Python Library"
-        - text: "{{< fa code >}} {{< var validmind.developer >}}"
-          file: developer/validmind-library.qmd
-        - text: "---"
-        - text:  "{{< fa graduation-cap >}} {{< var validmind.training >}}"
-        - text: "{{< fa building-columns >}} Training Courses"
-          file: training/training.qmd
-
       - text: "Log In"
         menu:
           - text: "Public Internet"
@@ -117,7 +141,6 @@ website:
           - text: "---"
           - text: "<small>Which login should I use?</small>"
             href: "guide/configuration/log-in-to-validmind.qmd"
-        
 
 #  COMMENT THIS OUT WHEN DONE TESTING
       # - text: "{{< fa flask >}} Testing"
@@ -293,75 +316,52 @@ website:
               file: faq/faq-privacy.qmd
 
 # COMMENT THIS OUT WHEN DONE TESTING
-    - title: "Testing"
-      contents:
-        - internal/testing.qmd
-        - text: "---"
-        - text: "EXPERIMENTS"
-        - file: internal/lightbox.qmd
-        - file: internal/footnotes/footnotes.qmd
-          contents:
-            - internal/footnotes/hover-only.qmd
+    # - title: "Testing"
+    #   contents:
+    #     - internal/testing.qmd
+    #     - text: "---"
+    #     - text: "EXPERIMENTS"
+    #     - file: internal/lightbox.qmd
+        # - file: internal/footnotes/footnotes.qmd
+        #   contents:
+        #     - internal/footnotes/hover-only.qmd
 
   page-footer:
-    background: "#26818B"
-    left:
-      - text: |
-          <div class="footer-title">
-            <img src="/homepage_docsite/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" width="140" style="margin-bottom: 6px;"><br>
-            <div style="margin-bottom: 6px;">
-              <img src="/homepage_docsite/Ellipse%201.svg" width="30" style="margin-right: 2px;">
-              <img src="/homepage_docsite/Ellipse%201.svg" width="30" style="margin-right: 2px;">
-              <img src="/homepage_docsite/Ellipse%201.svg" width="30">
-            </div>
-            <small>
-              © Copyright {{< now year >}} ValidMind Inc. All Rights Reserved.<br>
-              <a href="/privacy">Privacy Policy</a>  <a href="/terms">Terms of Services</a>
-            </small>
-          </div>
-    center:
-      - text: |
-          <div class="footer-column">
-            <strong>Community</strong><br>
-            <a href="/guide/guides.qmd">Guides</a><br>
-            <a href="/developer/validmind-library.qmd">For Developers</a><br>
-            <a href="/validmind/validmind.qmd">API Reference</a><br>
-            <a href="/training/training.qmd">Training</a><br>
-            <a href="/support/support.qmd">Support</a><br>
-          </div>
-      - text: |
-          <div class="footer-column">
-            <a href="https://validmind.com/" target="_blank">validmind.com</a><br>
-            <a href="https://validmind.com/about/legal/privacy-policy/">Privacy Policy</a><br>
-            <a href="https://validmind.com/about/legal/terms-of-use/">Terms of Use</a><br>
-            <a href="https://github.com/validmind/documentation">GitHub</a><br>
-            <a href="https://www.linkedin.com/company/validmind/">LinkedIn</a>
-          </div>
-format:
- html:
-   grid:
-     body-width: 1000px
-   footnotes-hover: true
-   reference-location: margin
-   code-overflow: wrap
-   code-annotations: below
-   theme:
-     light: [cosmo, theme.scss]
-#      dark: [cosmo, theme-dark.scss]
-   mainfont: Inter
-   css: styles.css
-   toc: true
-   link-external-newwindow: true
-   link-external-icon: true
-   callout-appearance: simple
-   link-external-filter: '^https:\/\/(docs\.validmind\.ai|docs-staging\.validmind\.ai|docs-demo\.vm\.validmind\.ai)\/.*'
-   lightbox: true
+    background: "#DE257E"
+    left: "© Copyright {{< now year >}} {{< var validmind.legal >}}  All Rights Reserved."
+    right:
+      - text: "validmind.com {{< fa external-link >}}"
+        href: https://validmind.com/
+        target: _blank
+      - text: "Privacy Policy"
+        href: https://validmind.com/about/legal/privacy-policy/
+      - text: "Terms of Use"
+        href: https://validmind.com/about/legal/terms-of-use/
+      - icon: github
+        href: https://github.com/validmind/documentation
+      - icon: linkedin
+        href: https://www.linkedin.com/company/validmind/
 
+format:
+  html:
+    grid:
+      body-width: 1000px
+    footnotes-hover: true
+    reference-location: margin
+    code-overflow: wrap
+    code-annotations: below
+    theme: 
+      light: [cosmo, theme.scss]
+#      dark: [cosmo, theme-dark.scss]
+    mainfont: Inter
+    css: styles.css
+    toc: true
+    link-external-newwindow: true
+    link-external-icon: true
+    callout-appearance: simple
+    link-external-filter: '^https:\/\/(docs\.validmind\.ai|docs-staging\.validmind\.ai|docs-demo\.vm\.validmind\.ai)\/.*'
+    lightbox: true
 
 filters:
- - tachyons
- - preview
-
-
-
- 
+  - tachyons
+  - preview
