Repurposing working with model workflows

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -217,8 +217,13 @@ website:
           contents:
           - guide/model-workflows/manage-model-stages.qmd
           - guide/model-workflows/configure-custom-workflows.qmd
-        - text: "Work with workflows"
-          file: guide/model-workflows/work-with-model-workflows.qmd
+        - text: "Working with workflows"
+          file: guide/model-workflows/working-with-model-workflows.qmd
+          contents:
+          - text: "Review workflows"
+            file: guide/model-workflows/review-model-workflows.qmd
+          - text: "Transition workflows"
+            file: guide/model-workflows/transition-model-workflows.qmd
         - text: "---"
         - text: "Model Inventory"
         - file: guide/model-inventory/working-with-model-inventory.qmd
