Review model workflows framework

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -220,8 +220,8 @@ website:
         - text: "Working with workflows"
           file: guide/model-workflows/working-with-model-workflows.qmd
           contents:
-          - text: "Review workflows"
-            file: guide/model-workflows/review-model-workflows.qmd
+          - text: "Manage workflows"
+            file: guide/model-workflows/manage-model-workflows.qmd
           - text: "Transition workflows"
             file: guide/model-workflows/transition-model-workflows.qmd
         - text: "---"
