Recent changes: added a sample of the new footer, still need to apply a few changes

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -307,35 +307,81 @@ website:
     background: "#26818B"
     left:
       - text: |
-          <div class="footer-title">
-            <img src="/homepage_docsite/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" width="140" style="margin-bottom: 6px;"><br>
-            <div style="margin-bottom: 6px;">
-              <img src="/homepage_docsite/Ellipse%201.svg" width="30" style="margin-right: 2px;">
-              <img src="/homepage_docsite/Ellipse%201.svg" width="30" style="margin-right: 2px;">
-              <img src="/homepage_docsite/Ellipse%201.svg" width="30">
+          <div class="footer-section footer-logo-info">
+            <img src="/homepage_docsite/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" alt="ValidMind Logo" class="footer-logo" />
+            <div class="footer-company-info">
+              <div>© Copyright {{< now year >}} ValidMind Inc.<br>All Rights Reserved.</div>
+              <a href="/cookie-preferences" class="footer-link">Cookie preferences</a>
             </div>
-            <small>
-              © Copyright {{< now year >}} ValidMind Inc. All Rights Reserved.<br>
-              <a href="/privacy">Privacy Policy</a>  <a href="/terms">Terms of Services</a>
-            </small>
-          </div>
-    center:
-      - text: |
-          <div class="footer-column">
-            <strong>Community</strong><br>
-            <a href="/guide/guides.qmd">Guides</a><br>
-            <a href="/developer/validmind-library.qmd">For Developers</a><br>
-            <a href="/validmind/validmind.qmd">API Reference</a><br>
-            <a href="/training/training.qmd">Training</a><br>
-            <a href="/support/support.qmd">Support</a><br>
           </div>
       - text: |
-          <div class="footer-column">
-            <a href="https://validmind.com/" target="_blank">validmind.com</a><br>
-            <a href="https://validmind.com/about/legal/privacy-policy/">Privacy Policy</a><br>
-            <a href="https://validmind.com/about/legal/terms-of-use/">Terms of Use</a><br>
-            <a href="https://github.com/validmind/documentation">GitHub</a><br>
-            <a href="https://www.linkedin.com/company/validmind/">LinkedIn</a>
+          <div class="footer-divider"></div>
+      - text: |
+          <div class="footer-section footer-user-guides">
+            <div class="footer-heading">User Guides</div>
+            <div class="footer-user-guides-columns">
+              <ul>
+                <li><a href="/get-started/get-started.qmd">Get started</a></li>
+                <li><a href="/get-started/onboarding.qmd">Onboarding</a></li>
+                <li><a href="/get-started/model-inventory.qmd">Model Inventory</a></li>
+                <li><a href="/get-started/whats-new.qmd">What's new?</a></li>
+              </ul>
+              <ul>
+                <li><a href="/guide/model-documentation/working-with-model-documentation.qmd">Model documentation</a></li>
+                <li><a href="/guide/model-validation/manage-validation-guidelines.qmd">Model validation</a></li>
+                <li><a href="/guide/model-workflows/working-with-model-workflows.qmd">Model workflows</a></li>
+              </ul>
+              <ul>
+                <li><a href="/guide/reporting/working-with-analytics.qmd">Reporting</a></li>
+                <li><a href="/guide/monitoring/ongoing-monitoring.qmd">Monitoring</a></li>
+                <li><a href="/guide/attestation/working-with-attestations.qmd">Attestation</a></li>
+              </ul>
+            </div>
+          </div>
+      - text: |
+          <div class="footer-divider"></div>
+      - text: |
+          <div class="footer-section">
+            <div class="footer-heading">ValidMind Library</div>
+            <ul>
+              <li><a href="/developer/validmind-library.qmd">For model development</a></li>
+              <li><a href="/developer/validmind-library.qmd#validation">For model validation</a></li>
+              <li><a href="/developer/code-samples.qmd">Code samples</a></li>
+              <li><a href="/validmind/validmind.qmd">API Reference</a></li>
+            </ul>
+          </div>
+      - text: |
+          <div class="footer-divider"></div>
+      - text: |
+          <div class="footer-section">
+            <div class="footer-heading">Training</div>
+            <ul>
+              <li><a href="/training/training.qmd">Learning paths</a></li>
+              <li><a href="/training/courses.qmd">Courses</a></li>
+              <li><a href="/training/videos.qmd">Videos</a></li>
+            </ul>
+          </div>
+      - text: |
+          <div class="footer-divider"></div>
+      - text: |
+          <div class="footer-section">
+            <div class="footer-heading">Support</div>
+            <ul>
+              <li><a href="/support/troubleshooting.qmd">Troubleshooting</a></li>
+              <li><a href="/faq/faq.qmd">FAQ</a></li>
+              <li><a href="/support/support.qmd">Get help</a></li>
+            </ul>
+          </div>
+      - text: |
+          <div class="footer-divider"></div>
+      - text: |
+          <div class="footer-section">
+            <div class="footer-heading">Community</div>
+            <ul>
+              <li><a href="https://github.com/validmind/documentation">Github</a></li>
+              <li><a href="#">Slack</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
           </div>
 format:
  html:
