--- a/site/get-started/_sidebar.yaml
+++ b/site/get-started/_sidebar.yaml
@@ -4,9 +4,9 @@ website:
       title: "Get Started"
       contents:
         - text: "Quickstart For"
-        - text: "Model development"
+        - text: "Model Development"
           file: get-started/developer/quickstart-developer.qmd
-        - text: "Model validation"
+        - text: "Model Validation"
           file: get-started/validator/quickstart-validator.qmd
-        - text: "Setup & administration"
+        - text: "Setup & Administration"
           file: get-started/administrator/quickstart-administrator.qmd
