--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -19,6 +19,7 @@ website:
   cookie-consent:
     type: express
     style: simple
+    position: center
   google-analytics: 
     tracking-id: "G-S46CKWPNSS"
     anonymize-ip: true
@@ -309,9 +310,19 @@ website:
       - text: |
           <div class="footer-section footer-logo-info">
             <img src="/homepage_docsite/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" alt="ValidMind Logo" class="footer-logo" />
-            <div class="footer-company-info">
-              <div>© Copyright {{< now year >}} ValidMind Inc.<br>All Rights Reserved.</div>
-              <a href="/cookie-preferences" class="footer-link">Cookie preferences</a>
+            <div class="footer-logo-columns">
+              <div class="footer-logo-links">
+                <ul>
+                  <li><a href="/news">News</a></li>
+                  <li><a href="/careers">Careers</a></li>
+                  <li><a href="/contact">Contact</a></li>
+                  <li><a href="/legal">Legal</a></li>
+                </ul>
+              </div>
+              <div class="footer-logo-divider"></div>
+              <div class="footer-company-info">
+                <div>© Copyright {{< now year >}} ValidMind Inc.<br>All Rights Reserved.</div>
+              </div>
             </div>
           </div>
       - text: |
