QuickStart casing fix

--- a/site/get-started/_sidebar.yaml
+++ b/site/get-started/_sidebar.yaml
@@ -3,7 +3,7 @@ website:
     - id: get-started
       title: "Get Started"
       contents:
-        - text: "Quickstart For"
+        - text: "Quickstarts"
         - text: "Model Development"
           file: get-started/developer/quickstart-developer.qmd
         - text: "Model Validation"
