Fixed cookies issue

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -321,7 +321,8 @@ website:
               </div>
               <div class="footer-logo-divider"></div>
               <div class="footer-company-info">
-                <div>© Copyright {{< now year >}} ValidMind Inc.<br>All Rights Reserved.</div>
+                <div>© Copyrigh {{< now year >}} ValidMind Inc.<br>All Rights Reserved.</div>
+                <a id="open_preferences_center" class="cookie-preferences-link" href="#">Cookie preferences</a>
               </div>
             </div>
           </div>
@@ -349,6 +350,7 @@ website:
               </ul>
             </div>
           </div>
+    center:
       - text: |
           <div class="footer-divider"></div>
       - text: |
@@ -372,6 +374,7 @@ website:
               <li><a href="/training/videos.qmd">Videos</a></li>
             </ul>
           </div>
+    right:
       - text: |
           <div class="footer-divider"></div>
       - text: |
