Workflow configuration examples setup

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -217,6 +217,8 @@ website:
           contents:
           - guide/model-workflows/manage-model-stages.qmd
           - guide/model-workflows/configure-custom-workflows.qmd
+          - text: "Configuration examples"
+            file: guide/model-workflows/workflow-configuration-examples.qmd
         - text: "Working with workflows"
           file: guide/model-workflows/working-with-model-workflows.qmd
           contents:
