--- a/site/guide/_sidebar.yaml
+++ b/site/guide/_sidebar.yaml
@@ -35,18 +35,16 @@ website:
           contents:
           - guide/model-workflows/manage-model-stages.qmd
           - guide/model-workflows/configure-model-workflows.qmd
-          - text: "Configuration examples"
-            file: guide/model-workflows/workflow-configuration-examples.qmd
+          - guide/model-workflows/workflow-configuration-examples.qmd
         - text: "Working with workflows"
           file: guide/model-workflows/working-with-model-workflows.qmd
           contents:
-          - text: "Manage workflows"
-            file: guide/model-workflows/manage-model-workflows.qmd
-          - text: "Transition workflows"
-            file: guide/model-workflows/transition-model-workflows.qmd
+          - guide/model-workflows/manage-model-workflows.qmd
+          - guide/model-workflows/transition-model-workflows.qmd
         - text: "---"
         - text: "Model Inventory"
-        - file: guide/model-inventory/working-with-model-inventory.qmd
+        - text: "Working with the inventory"
+          file: guide/model-inventory/working-with-model-inventory.qmd
           contents:
           - guide/model-inventory/register-models-in-inventory.qmd
           - guide/model-inventory/customize-model-inventory-layout.qmd
@@ -68,7 +66,8 @@ website:
         - guide/templates/manage-text-block-library.qmd
         - text: "---"
         - text: "Model Documentation"
-        - file: guide/model-documentation/working-with-model-documentation.qmd
+        - text: "Working with documentation"
+          file: guide/model-documentation/working-with-model-documentation.qmd
           contents:
           - guide/model-documentation/view-documentation-guidelines.qmd
           - guide/model-documentation/work-with-content-blocks.qmd
