Fix file issue and modify style.css and index.qmd

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -321,7 +321,7 @@ website:
               </div>
               <div class="footer-logo-divider"></div>
               <div class="footer-company-info">
-                <div>© Copyrigh {{< now year >}} ValidMind Inc.<br>All Rights Reserved.</div>
+                <div>© Copyrigh {{< now year >}}<br>ValidMind Inc.<br>All Rights Reserved.</div>
                 <a id="open_preferences_center" class="cookie-preferences-link" href="#">Cookie preferences</a>
               </div>
             </div>
@@ -334,9 +334,9 @@ website:
             <div class="footer-user-guides-columns">
               <ul>
                 <li><a href="/get-started/get-started.qmd">Get started</a></li>
-                <li><a href="/get-started/onboarding.qmd">Onboarding</a></li>
-                <li><a href="/get-started/model-inventory.qmd">Model Inventory</a></li>
-                <li><a href="/get-started/whats-new.qmd">What's new?</a></li>
+                <li><a href="/guide/model-validation/manage-validation-guidelines.qmd">Onboarding</a></li>
+                <li><a href="/guide/guides.qmd">Model Inventory</a></li>
+                <li><a href="/releases/all-releases.qmd">What's new?</a></li>
               </ul>
               <ul>
                 <li><a href="/guide/model-documentation/working-with-model-documentation.qmd">Model documentation</a></li>
@@ -359,7 +359,7 @@ website:
             <ul>
               <li><a href="/developer/validmind-library.qmd">For model development</a></li>
               <li><a href="/developer/validmind-library.qmd#validation">For model validation</a></li>
-              <li><a href="/developer/code-samples.qmd">Code samples</a></li>
+              <li><a href="/developer/samples-jupyter-notebooks.qmd">Code samples</a></li>
               <li><a href="/validmind/validmind.qmd">API Reference</a></li>
             </ul>
           </div>
@@ -370,8 +370,8 @@ website:
             <div class="footer-heading">Training</div>
             <ul>
               <li><a href="/training/training.qmd">Learning paths</a></li>
-              <li><a href="/training/courses.qmd">Courses</a></li>
-              <li><a href="/training/videos.qmd">Videos</a></li>
+              <li><a href="/training/training.qmd">Courses</a></li>
+              <li><a href="/training/training.qmd">Videos</a></li>
             </ul>
           </div>
     right:
@@ -424,4 +424,3 @@ filters:
 
 
 
- 
