Initial commit for rebranding

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -11,9 +11,9 @@ metadata-files:
   - installation/_sidebar.yaml
 
 website:
-  announcement: 
-    content: '[**{{< fa book-open-reader >}} EU AI Act Compliance**](https://validmind.com/download-whitepaper-the-eu-ai-act/) — Read our original regulation brief on how the EU AI Act aims to balance innovation with safety and accountability, setting standards for responsible AI use'
-    position: above-navbar 
+  # announcement: 
+  #   content: "[**{{< fa book-open-reader >}} EU AI Act Compliance**](https://validmind.com/download-whitepaper-the-eu-ai-act/) — Read our original regulation brief on how the EU AI Act aims to balance innovation with safety and accountability, setting standards for responsible AI use" 
+    # position: below-navbar 
   favicon: validmind.png
   title: "ValidMind"
   cookie-consent:
