--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -46,9 +46,9 @@ link:
 # Rendered format: `{{< var url.us1 >}}`
 
 url:
-  us1: "https://app.prod.validmind.ai"          # Docker: VALIDMIND_URL
+  us1: "https://app.prod.validmind-configurable-url.ai"          # Docker: VALIDMIND_URL
   ca1: "https://app.ca1.validmind.ai"
-  jupyterhub: "https://jupyterhub.validmind.ai" # Docker: JUPYTERHUB_URL
+  jupyterhub: "https://jupyterhub.validmind-configurable-url.ai" # Docker: JUPYTERHUB_URL
 
 # Amazon Web Services Privatelink specific URLs
 # Rendered format: `{{< var aws.privatelink >}}`
