Uncomment git restore

--- a/site/_quarto-experian.yml
+++ b/site/_quarto-experian.yml
@@ -9,7 +9,7 @@ project:
   pre-render: 
     - scripts/modify_urls.sh
     - experian/rebrand_variables.py
-  # post-render: bash -c "git restore _variables.yml >/dev/null 2>&1 && echo 'Restored _variables.yml'"
+  post-render: bash -c "git restore _variables.yml >/dev/null 2>&1 && echo 'Restored _variables.yml'"
 
 website:
   title: "Experian powered by ValidMind"
