Move sitemap from post-render action into GitHub wworkflow step

--- a/.github/workflows/deploy-docs-prod.yaml
+++ b/.github/workflows/deploy-docs-prod.yaml
@@ -51,6 +51,7 @@ jobs:
             cat render_errors.log;
             exit 1;
             }
+            make generate-sitemap
 
       # If yes then create the dev.env file for use in execution step
       - name: Create dev.env file
