--- a/.github/workflows/deploy-docs-staging.yaml
+++ b/.github/workflows/deploy-docs-staging.yaml
@@ -41,6 +41,7 @@ jobs:
             cat render_errors.log;
             exit 1;
             }
+            make generate-sitemap
 
       # If yes then create the dev.env file for use in execution step
       - name: Create dev.env file
